<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuRefresh"
        android:title="@string/menu_toast_credit"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/menuStart"
        android:title="@string/toggle_turn_start"
        android:icon="@drawable/ic_action_play"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuStop"
        android:title="@string/toggle_turn_stop"
        android:icon="@drawable/ic_action_stop"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuSetting"
        android:title="@string/menu_setting"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menuCredit"
        android:title="@string/menu_toast_credit"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menuExit"
        android:title="@string/menu_exit"
        android:showAsAction="never" />

</menu>
